--- a/webvisualizations/style.css
+++ b/webvisualizations/style.css
@@ -55,11 +55,25 @@
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
- 
+
+
  article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
    display: block;
  }
+ /* html,
+ body,
+ header,
+ #intro {
+     height: 100%;
+ }
  
+ #intro {
+     background: url("https://empoweryourknowledgeandhappytrivia.files.wordpress.com/2014/12/world-climate-map.png");
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover; */
+  
  body {
    margin: 0;
    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -86,9 +100,50 @@
    margin-bottom: 0.5rem;
  }
  h3 {
-     color: #45122b;
-     /* color: #010708; */
+     /* color: #45122b; */
+     color: #010708;
  }
+
+/* #Landing{
+    /* position: fixed; */
+/* }  */ 
+
+ img.bg {
+     min-height: 100%;
+     min-width: 1024px;
+     width: 100%;
+     height: auto;
+     position: fixed;
+     top: 10;
+     left: 0;
+ }
+
+
+ @media screen and (max-width: 1024px) {
+    img.bg{
+        left: 50%;
+        margin-left: -480px;
+    }    
+ }
+ /* html,
+ body,
+ header,
+ #intro {
+     height: 100%;
+ }
+ 
+ #view {
+     background: url("https://en.wikipedia.org/wiki/Temperate_climate#/media/File:Latitude_zones.png")no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+ } */
+
+ /* #Lat-Map {
+     padding-left: 0%;
+     margin-left: 0%;
+ } */
  
  p {
    margin-top: 0;
