--- a/webvisualizations/style.css
+++ b/webvisualizations/style.css
@@ -118,13 +118,18 @@
      left: 0;
  }
 
-
+#return {
+  margin-right: 0.5;
+  margin-bottom: 2.5;
+}
  @media screen and (max-width: 1024px) {
     img.bg{
         left: 50%;
         margin-left: -480px;
     }    
  }
+
+
  /* html,
  body,
  header,
