--- a/webvisualizations/style.css
+++ b/webvisualizations/style.css
@@ -129,6 +129,92 @@
     }    
  }
 
+.h1 {
+  text-align: center;
+}
+
+/* .overflow-x {
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+} */
+
+
+.card-group {
+  @include media-breakpoint-up(sm) {
+    @include make-row(4)
+  }
+}
+
+/* #gthumbnails {
+  @include media-breakpoint-up(sm) {
+    @include make-col(1)
+  }
+} */
+
+@media (max-width: 480px) {
+  #gthumbnails {
+    visibility: collapse;
+    display: none;
+  }
+  img.bg {
+    top: 5;
+  }
+}
+
+/* <div class="container-sm">100% wide until small breakpoint</div>
+<div class="container-md">66.6% wide until medium breakpoint</div>
+<div class="container-lg">100% wide until large breakpoint</div>
+<div class="container-xl">100% wide until extra large breakpoint</div> */
+
+
+/* 
+@media (max-width: 575.98px) {
+  .table-responsive-sm {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  .table-responsive-sm > .table-bordered {
+    border: 0;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .table-responsive-md {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  .table-responsive-md > .table-bordered {
+    border: 0;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .table-responsive-lg {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  .table-responsive-lg > .table-bordered {
+    border: 0;
+  }
+} */
+
+
+
+
+/* .card-group {
+  @include media-breakpoint-up(sm) {
+    row-count: 4;
+  }
+} */
+ 
+  
 
  /* html,
  body,
@@ -620,7 +706,7 @@
  .container-xl {
    width: 100%;
    padding-right: 15px;
-   padding-left: 15px;
+   padding-left: 25px;
    margin-right: auto;
    margin-left: auto;
  }
