--- a/webvisualizations/style.css
+++ b/webvisualizations/style.css
@@ -99,14 +99,24 @@
    margin-top: 0;
    margin-bottom: 0.5rem;
  }
- h3 {
+ h3, h2 {
      /* color: #45122b; */
      color: #010708;
  }
 
+p1 {
+   color: var(--teal);
+   /* color: cyan; */
+   background-color: var(--gray-dark);
+   
+}
+
+
+
 /* #Landing{
     /* position: fixed; */
 /* }  */ 
+
 
  img.bg {
      min-height: 100%;
@@ -161,6 +171,8 @@
     top: 5;
   }
 }
+
+
 
 /* <div class="container-sm">100% wide until small breakpoint</div>
 <div class="container-md">66.6% wide until medium breakpoint</div>
