--- a/style.css
+++ b/style.css
@@ -99,9 +99,17 @@ p1 {
    
 }
 
+
 p2 {
-  color: var(--danger);
+  color: var(--info);
 }
+
+p3{
+  color: var(--success);
+}
+
+/* <i class="fa fa-wind"></i> */
+/* &#xf72e; */
 
 /* #Landing{
     /* position: fixed; */
